--- a/package.json
+++ b/package.json
@@ -51,7 +51,11 @@
   "dependencies": {
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
+    "concurrently": "^7.1.0",
+    "cross-env": "^7.0.3",
     "fontsource-roboto": "^4.0.0",
+    "mongodb": "^4.5.0",
+    "mongoose": "^6.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hot-loader": "^4.13.0",
