--- a/package.json
+++ b/package.json
@@ -2,13 +2,10 @@
   "name": "soloproject",
   "version": "1.0.0",
   "description": "",
-  "main": "user/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "clean": "rm dist/bundle.js",
-    "start": "nodemon server/server.js",
+    "start": "nodemon server/server.js --open",
     "build": "NODE_ENV=production webpack",
-    "dev": "NODE_ENV=development webpack serve --open"
+    "dev": "concurrently \"cross-env NODE_ENV=development webpack serve --open\" \"cross-env nodemon ./server/server.js\""
   },
   "repository": {
     "type": "git",
@@ -26,23 +23,17 @@
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "@hot-loader/react-dom": "^17.0.2",
-    "@types/react": "^17.0.44",
-    "@types/react-dom": "^18.0.1",
     "autoprefixer": "^10.4.4",
     "babel-loader": "^8.2.4",
-    "clean-webpack-plugin": "^4.0.0",
-    "copy-webpack-plugin": "^10.2.4",
     "css-loader": "^6.7.1",
     "eslint": "^8.13.0",
     "eslint-plugin-react": "^7.29.4",
     "html-webpack-plugin": "^5.5.0",
     "node-sass": "^7.0.1",
-    "nodemon": "^2.0.15",
     "postcss-loader": "^6.2.1",
     "prettier": "^2.6.2",
     "sass-loader": "^12.6.0",
     "style-loader": "^3.3.1",
-    "ts-loader": "^9.2.8",
     "typescript": "^4.6.3",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2",
@@ -51,11 +42,14 @@
   "dependencies": {
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
+    "clean-webpack-plugin": "^4.0.0",
     "concurrently": "^7.1.0",
+    "copy-webpack-plugin": "^10.2.4",
     "cross-env": "^7.0.3",
     "fontsource-roboto": "^4.0.0",
     "mongodb": "^4.5.0",
     "mongoose": "^6.3.0",
+    "nodemon": "^2.0.15",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hot-loader": "^4.13.0",
